@@ -1,5 +1,9 @@
 2009-12-17  Ivan Maidanski <ivmai@mail.ru>
 
+	* build-solaris-amd64-jcgo.sh: New executable file.
+
+2009-12-17  Ivan Maidanski <ivmai@mail.ru>
+
 	* build-linux-x86-jcgo.sh: New executable file.
 	* build-win32-x86-jcgo.bat: Update a message.
 
